# Linko

./: .gitignore  .prettierignore  GITFLOW_GUIDE.md  LICENSE  MONOREPO_GUIDE.md  README.md  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repomix-output.xml
.github/ISSUE_TEMPLATE/: template-issue--outcome-based--định-hướng-kết-quả-.md
.github/workflows/: ci-backend.yml  ci.yml
apps/: index.html  package.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py  0002_seed_reference_data.py
apps/api/app/: config.py  exceptions.py  main.py  models.py  schemas.py
apps/api/app/routers/: businesses.py
apps/api/core/: idempotency.py  province_mapping.py
apps/api/scripts/: export_openapi.py  seed.py
apps/api/tests/: conftest.py  test_businesses.py  test_idempotency.py  test_province_mapping.py
apps/landing-page/: index.html  package.json
apps/landing-page/src/: App.jsx
apps/src/: App.tsx
apps/src/components/: OnboardingGuard.tsx
apps/src/context/: AuthContext.tsx
apps/src/hooks/: useOnboarding.ts
apps/src/pages/: DashingBoard.tsx  LandingPage.tsx  LoginPage.tsx  OnboardingPage.tsx  (+1 more)
apps/web-app/: package.json
temp/: implementation-plan.md  pr-body.md  schema.md  verification.md
temp/issue16/: assumptions.md  decisions.md  fe-integration-guide.md  implementation-notes.md  implementation-plan.md  open-questions.md  research.md
temp/issue7/: implementation-plan.md  research.md
