[project]
name = "linko-api"
version = "0.1.0"
description = "Linko backend - business matching platform (Issue #4)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic-settings>=2.0",
    "cloud-sql-python-connector[asyncpg]>=1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "core*"]
exclude = ["alembic*", "scripts*", "tests*"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["alembic/versions/", ".venv/", ".venv-check/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
